<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/txt_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_tags"
                android:layout_margin="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item1"
                android:text="@string/txt_robotica"
                android:layout_below="@id/txt_tags"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item2"
                android:text="@string/txt_iot"
                android:layout_below="@id/item1"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item3"
                android:text="@string/txt_computacao_grafica"
                android:layout_below="@id/item2"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item4"
                android:text="@string/txt_inteligencia_artificial"
                android:layout_below="@id/item3"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item5"
                android:text="@string/txt_eng_soft"
                android:layout_below="@id/item4"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item6"
                android:text="@string/txt_virtualizacao"
                android:layout_below="@id/item5"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item7"
                android:text="@string/txt_hardware"
                android:layout_below="@id/item6"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item8"
                android:text="@string/txt_proc_dados"
                android:layout_below="@id/item7"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item9"
                android:text="@string/txt_saude"
                android:layout_below="@id/item8"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item10"
                android:text="@string/txt_outros"
                android:layout_below="@id/item9"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/item10">

                <Button
                    android:id="@+id/btn_voltar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_voltar"
                    android:layout_alignParentLeft="true"/>

                <Button
                    android:id="@+id/btn_gerar_roteiro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_gerar_roteiro"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>