<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vinicius.listview.ActivityPrincipal"
    tools:showIn="@layout/app_bar_principal">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_puc"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:src="@drawable/pucrs"
                android:scaleType="fitXY"
                android:layout_alignParentTop="true"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/img_puc"
                android:shrinkColumns="0">
                <!--PET-Informatica-->
                <TableRow
                    android:gravity="center"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textStyle="bold"
                        android:textSize="50dp"
                        android:textColor="#000000"
                        android:layout_gravity="center"
                        android:textAlignment="center"/>
                </TableRow>
                <!--O que é?-->
                <TableRow
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_1"
                        android:textSize="40dp"
                        android:textColor="#111111"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/conteudo_1"
                        android:textSize="20dp"
                        android:textAlignment="center"
                        android:layout_marginTop="5dp"/>
                </TableRow>
                <!--Atividades realizadas-->
                <TableRow
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_2"
                        android:textSize="40dp"
                        android:textColor="#111111"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_marginTop="10dp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/conteudo_2_1"
                        android:textSize="20dp"
                        android:textAlignment="center"
                        android:layout_marginTop="5dp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/conteudo_2_2"
                        android:textSize="20dp"
                        android:textAlignment="center"
                        android:layout_marginTop="5dp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/conteudo_2_3"
                        android:textSize="20dp"
                        android:textAlignment="center"
                        android:layout_marginTop="5dp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/conteudo_2_4"
                        android:textSize="20dp"
                        android:textAlignment="center"
                        android:layout_marginTop="5dp"/>
                </TableRow>


            </TableLayout>

        </RelativeLayout>
    </ScrollView>




</RelativeLayout>
